<resources>
    <string name="app_name">DemExam</string>
    <string name="hello">ПРИВЕТ</string>
    <string name="text">Наслаждайся отборочными.\nБудь внимателен.\nДелай хорошо.</string>
    <string name="sign_in">Войти в аккаунт</string>
    <string name="no_acc">Еще нет аккаунта?</string>
    <string name="reg">Зарегистрируйтесь</string>
    <string name="sign_in_k">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="profile">Профиль</string>
    <string name="sign_up_2">Зарегистрировать</string>
    <string name="name">Имя</string>
    <string name="fam">Фамилия</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">NickName</string>
    <string name="city">Город:</string>
</resources>