<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/bgc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageUser"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/png_test"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CornersSize50"
                android:layout_marginEnd="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/nickNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/alegreya_medium"
                    android:text="@string/nickname"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/alegreya_medium"
                    android:text="@string/email"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/alegreya_medium"
                        android:text="@string/city"
                        android:layout_marginEnd="5dp"/>
                    <TextView
                        android:id="@+id/cityTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/alegreya_medium"
                        android:text="@string/city"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>